# ballpath

./: CMakeLists.txt  Doxyfile  INSTALL  README
src/: appcontroller.cpp  appcontroller.h  inputreader.cpp  inputreader.h  main.cpp  resultwriter.cpp  resultwriter.h
src/core/: action.h  gamemap.cpp  gamemap.h  node.cpp  node.h  nodeiterator.cpp  nodeiterator.h  path.h  pathfinder.cpp  pathfinder.h
src/util/: math.h  point.cpp  point.h  size.cpp  size.h
tests/: input0.txt  input1.txt  input2.txt  input3.txt  input4.txt  input5.txt  input6.txt  input7.txt
